# dynamico

./: .gitignore
backend/: main.py  pyproject.toml
backend/api/: routers.py
backend/api/routes/: health.py
docs/: token-design.md
frontend/: package-lock.json
frontend/src/: App.tsx
onchain/fee_registry/: Anchor.toml  package.json
onchain/fee_registry/migrations/: deploy.ts
onchain/fee_registry/programs/fee_registry/: Cargo.toml
onchain/fee_registry/programs/fee_registry/src/: constats.rs  lib.rs
onchain/fee_registry/programs/fee_registry/src/instructions/: create_account.rs  initialize_project.rs  mod.rs  withdraw_fees.rs
onchain/fee_registry/programs/fee_registry/src/state/: mod.rs  project_state.rs
onchain/fee_registry/tests/: fee_registry.ts
scripts/: client.ts  constants.ts  createToken.js  createToken.ts  mintTokens.ts  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  transferTokens.ts  tsconfig.json  wallet.ts
scripts/config/: constants.ts
scripts/mint/: account.ts  createMint.ts  initialize.ts  transferFees.ts
scripts/rpc/: connections.ts
scripts/transactions/: builder.ts  computeUnits.ts  sender.ts
scripts/wallet/: createWallet.ts
