[package]
name = "fee_registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
	"anchor-lang/idl-build",
	"anchor-spl/idl-build"
]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["interface-instructions"] }
anchor-spl = "0.32.1"
# spl-token-metadata-interface = "0.3.3"
# spl-type-length-value = "0.9.0"
spl-tlv-account-resolution = "0.10.0"
solana-zk-sdk = "4.0.0"
spl-transfer-hook-interface = "0.10.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
